media query was added

--- a/homepage.html
+++ b/homepage.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="homepage.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
     <title>HomePage</title>
 </head>
 <body>
@@ -21,8 +22,12 @@
             <h2>Watch anywhere. Cancel anytime.</h2>
             <p>Ready to watch? Enter your email to create or restart membership.</p>
             <form>
+                <div>
                 <input type="email" name="email" placeholder="Email address" required>
-                <a href="signup.html"><input type="button" value="Get Started >"></a>
+                </div>
+                <div>
+                <a href="signup.html"><input type="button" value="Get Started"><i class="fas fa-chevron-right"></i></a>
+                </div>
             </form>
         </div>
     </section>
@@ -105,8 +110,12 @@
         </details>
         <p class="p">Ready to watch? Enter your email to create or restart your membership.</p>
         <form class="form">
+            <div>
             <input type="email" name="email" placeholder="Email address" required>
-            <a href="signup.html"><input type="button" value="Get Started >"></a>
+            </div>
+            <div>
+            <a href="signup.html"><input type="button" class="form-button" value="Get Started"></a>
+            </div>
         </form>
     </section>
     <hr>
