added media query to sigin in page

--- a/signin.html
+++ b/signin.html
@@ -23,7 +23,7 @@
             <label for="check">Remember me</label> <a class="check" href="#">Need help?</a>
         </form>
         <h3>New to Netflix? <a href="homepage.html">Sign up now</a>.</h3>
-        <p>This page is protected by Google reCAPTCHA to <br>ensure you're not a bot. <a href="#">Learn more.</a></p>
+        <p>This page is protected by Google reCAPTCHA to ensure you're not a bot. <div><a class="learn" href="#">Learn more.</a></div></p>
     </section>
     <footer>
         <br><br>
